--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -91,7 +91,7 @@ pipeline {
                     sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
                     echo 'Plot LLC results.'
                     plot(csvFileName: 'plot-32d91d63-10d3-4d8e-aeb7-8de5f116346f.csv', 
-                         csvSeries: [[displayTableFlag: true, exclusionValues: '', file: 'test_results.csv', inclusionFlag: 'OFF', url: '']], 
+                         csvSeries: [[displayTableFlag: true, exclusionValues: '', file: 'prm/test_results.csv', inclusionFlag: 'OFF', url: '']],
                          group: 'PRM performance', 
                          style: 'line', 
                          title: 'Precision & Recall')
