--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -89,6 +89,8 @@ pipeline {
                 always {
                     // echo 'Stop all workloads.'
                     // sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
+                    csvFileName: 'results.csv',
+                    style: 'line',
                     echo 'Plot LLC results.'
                     plot(
                         csvSeries: [
