--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -72,6 +72,7 @@ pipeline {
                 MESOS_EXPECTED_TASKS = 13
             }
             steps {
+                echo 'no huj'
             //     dir('prm/owca/workloads'){
             //         echo 'Start baseline workloads.'
             //         sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
