--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -72,24 +72,23 @@ pipeline {
                 MESOS_EXPECTED_TASKS = 13
             }
             steps {
-                echo 'no huj'
-            //     dir('prm/owca/workloads'){
-            //         echo 'Start baseline workloads.'
-            //         sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-            //         sleep 15
-            //         echo 'Start contender workload.'
-            //         sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-            //         sleep 30
-            //     }
-            //     dir('prm'){
-            //         echo "Calculate LLC results for ${BUILD_NUMBER}."
-            //         sh 'pipenv run pytest test_calculate_accuracy.py --junitxml=unit_results.xml --junit-prefix=llc --log-level=debug'
-            //     }
+                dir('prm/owca/workloads'){
+                    echo 'Start baseline workloads.'
+                    sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    sleep 15
+                    echo 'Start contender workload.'
+                    sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    sleep 30
+                }
+                dir('prm'){
+                    echo "Calculate LLC results for ${BUILD_NUMBER}."
+                    sh 'pipenv run pytest test_calculate_accuracy.py --junitxml=unit_results.xml --junit-prefix=llc --log-level=debug'
+                }
             }
             post {
                 always {
-                    // echo 'Stop all workloads.'
-                    // sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
+                    echo 'Stop all workloads.'
+                    sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
                     echo 'Plot LLC results.'
                     plot(
                         csvFileName: 'results.csv',
@@ -105,9 +104,8 @@ pipeline {
                         ],
                        group: 'PRM performance',
                     )
-                    // echo 'Storing LLC results.'
-                    // junit 'prm/unit_results.xml'
-
+                    echo 'Storing LLC results.'
+                    junit 'prm/unit_results.xml'
                 }
             }
         }
