--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -78,11 +78,11 @@ pipeline {
                     sleep 15
                     echo 'Start contender workload.'
                     sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-                    sleep 30
+                    sleep 15
                 }
                 dir('prm'){
                     echo "Calculate LLC results for ${BUILD_NUMBER}."
-                    sh 'pipenv run pytest test_calculate_accuracy.py --junitxml=unit_results.xml --junit-prefix=llc --log-level=debug'
+                    sh 'pipenv run pytest tests/e2e/test_calculate_accuracy.py --junitxml=unit_results.xml --junit-prefix=llc --log-level=debug'
                 }
             }
             post {
@@ -91,7 +91,7 @@ pipeline {
                     sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
                     echo 'Plot LLC results.'
                     plot(
-                        csvFileName: 'results.csv',
+                        csvFileName: 'llc_results.csv',
                         style: 'line',
                         csvSeries: [
                             [
@@ -103,40 +103,56 @@ pipeline {
                             ]
                         ],
                        group: 'PRM performance',
+                       title: 'LLC complex scenario',
                     )
                     echo 'Storing LLC results.'
                     junit 'prm/unit_results.xml'
                 }
             }
         }
-        // stage("Run Memory Bandwidth experiment") {
-        //     when {
-        //         expression { return params.MB }
-        //     }
-        //     steps {
-        //         dir('prm/owca/workloads'){
-        //             echo 'Start baseline workloads.'
-        //             sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
-        //             sleep 30
-        //             echo 'Start contender workload.'
-        //             sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=tensorflow_benchmark_prediction--stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-        //             sleep 30
-        //
-        //         }
-        //         dir('prm'){
-        //             echo "Calculate MBW results for ${BUILD_NUMBER}."
-        //             sh 'pipenv run pytest test_calculate_accuracy.py --junitxml=unit_results.xml --junit-prefix=mbw --log-level=debug'
-        //         }
-        //     }
-        //     post {
-        //         always {
-        //             echo 'Stop all workloads.'
-        //             sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
-        //             echo 'Storing MBW results.'
-        //             junit 'prm/unit_results.xml'
-        //         }
-        //     }
-        // }
+        stage("Run Memory Bandwidth experiment") {
+            when {
+                expression { return params.MB }
+            }
+            steps {
+                dir('prm/owca/workloads'){
+                    echo 'Start baseline workloads.'
+                    sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
+                    sleep 15
+                    echo 'Start contender workload.'
+                    sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=tensorflow_benchmark_prediction--stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    sleep 15
+                }
+                dir('prm'){
+                    echo "Calculate MBW results for ${BUILD_NUMBER}."
+                    sh 'pipenv run pytest tests/e2e/test_calculate_accuracy.py --junitxml=unit_results.xml --junit-prefix=mbw --log-level=debug'
+                }
+            }
+            post {
+                always {
+                    echo 'Stop all workloads.'
+                    sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
+                    echo 'Plot MBW results.'
+                    plot(
+                        csvFileName: 'mbw_results.csv',
+                        style: 'line',
+                        csvSeries: [
+                            [
+                                displayTableFlag: false,
+                                exclusionValues: '',
+                                inclusionFlag: 'OFF',
+                                file: 'prm/test_results.csv',
+                                url: ''
+                            ]
+                        ],
+                       group: 'PRM performance',
+                       title: 'MBW complex scenario',
+                    )
+                    echo 'Storing MBW results.'
+                    junit 'prm/unit_results.xml'
+                }
+            }
+        }
         stage("Clean all jobs") {
             when { expression { return params.MB | params.LLC} }
             steps {
