--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -15,9 +15,9 @@ pipeline {
         timeout(time: 5, unit: 'MINUTES')
     }
     parameters {
-        booleanParam(name: 'REDEPLOY_PEX', defaultValue: false, description: 'Redeploy pex this value')
+        booleanParam(name: 'REDEPLOY_PEX', defaultValue: true, description: 'Redeploy pex this value')
         booleanParam(name: 'LLC', defaultValue: true, description: 'Run LLC experiment')
-        booleanParam(name: 'MB', defaultValue: false, description: 'Run LLC experiment')
+        booleanParam(name: 'MB', defaultValue: true, description: 'Run MBW experiment')
     }
     stages {
         stage('Redeploy pex') {
@@ -75,10 +75,10 @@ pipeline {
                 dir('prm/owca/workloads'){
                     echo 'Start baseline workloads.'
                     sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-                    sleep 15
+                    sleep 30
                     echo 'Start contender workload.'
                     sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-                    sleep 15
+                    sleep 30
                 }
                 dir('prm'){
                     echo "Calculate LLC results for ${BUILD_NUMBER}."
@@ -89,6 +89,7 @@ pipeline {
                 always {
                     echo 'Stop all workloads.'
                     sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
+                    sleep 5
                     echo 'Plot LLC results.'
                     plot(
                         csvFileName: 'llc_results.csv',
@@ -114,11 +115,14 @@ pipeline {
             when {
                 expression { return params.MB }
             }
+            environment {
+                MESOS_EXPECTED_TASKS = 10
+            }
             steps {
                 dir('prm/owca/workloads'){
                     echo 'Start baseline workloads.'
                     sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
-                    sleep 15
+                    sleep 30
                     echo 'Start contender workload.'
                     sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=tensorflow_benchmark_prediction--stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
                     sleep 15
