--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -69,16 +69,16 @@ pipeline {
                 expression { return params.LLC }
             }
             environment {
-                MESOS_EXPECTED_TASKS = 13
+                MESOS_EXPECTED_TASKS = -1
             }
             steps {
                 dir('prm/owca/workloads'){
                     echo 'Start baseline workloads.'
-                    sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-                    sleep 30
-                    echo 'Start contender workload.'
-                    sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-                    sleep 30
+                    // sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    // sleep 30
+                    // echo 'Start contender workload.'
+                    // sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    // sleep 30
                 }
                 dir('prm'){
                     echo "Calculate LLC results for ${BUILD_NUMBER}."
@@ -88,8 +88,8 @@ pipeline {
             post {
                 always {
                     echo 'Stop all workloads.'
-                    sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
-                    sleep 5
+                    // sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
+                    // sleep 5
                     echo 'Plot LLC results.'
                     plot(
                         csvFileName: 'llc_results.csv',
@@ -103,9 +103,11 @@ pipeline {
                                 url: ''
                             ]
                         ],
-                       group: 'PRM performance',
+                       group: 'PRM performance v2',
                        title: 'LLC complex scenario',
                        numBuilds: '5',
+                       width: 1000,
+                       height: 1000
                     )
                     echo 'Storing LLC results.'
                     junit 'prm/unit_results.xml'
@@ -117,16 +119,16 @@ pipeline {
                 expression { return params.MB }
             }
             environment {
-                MESOS_EXPECTED_TASKS = 10
+                MESOS_EXPECTED_TASKS = -1
             }
             steps {
                 dir('prm/owca/workloads'){
                     echo 'Start baseline workloads.'
-                    sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
-                    sleep 30
-                    echo 'Start contender workload.'
-                    sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=tensorflow_benchmark_prediction--stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-                    sleep 15
+                    // sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
+                    // sleep 30
+                    // echo 'Start contender workload.'
+                    // sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=tensorflow_benchmark_prediction--stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    // sleep 15
                 }
                 dir('prm'){
                     echo "Calculate MBW results for ${BUILD_NUMBER}."
@@ -135,8 +137,8 @@ pipeline {
             }
             post {
                 always {
-                    echo 'Stop all workloads.'
-                    sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
+                    // echo 'Stop all workloads.'
+                    // sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
                     echo 'Plot MBW results.'
                     plot(
                         csvFileName: 'mbw_results.csv',
@@ -150,20 +152,14 @@ pipeline {
                                 url: ''
                             ]
                         ],
-                       group: 'PRM performance',
+                       group: 'PRM performance v2',
                        title: 'MBW complex scenario',
                        numBuilds: '5',
+                       width: 1000,
+                       height: 1000
                     )
                     echo 'Storing MBW results.'
                     junit 'prm/unit_results.xml'
-                }
-            }
-        }
-        stage("Clean all jobs") {
-            when { expression { return params.MB | params.LLC} }
-            steps {
-                dir('prm/owca/workloads') {
-                    sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
                 }
             }
         }
