--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -9,6 +9,8 @@ pipeline {
         MESOS_MASTER_HOST='100.64.176.23'
         LLC_LABELS="{additional_labels: {build_number: \"${BUILD_NUMBER}\", build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", scenario: \"complex_llc.0\"}}"
         MBW_LABELS="{additional_labels: {build_number: \"${BUILD_NUMBER}\", build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", scenario: \"complex_mbw.0\"}}"
+        BASELINE_SLEEP = 15
+        CONTENDER_SLEEP = 15
     }
     options {
         disableConcurrentBuilds()
@@ -76,11 +78,11 @@ pipeline {
             steps {
                 dir('prm/owca/workloads'){
                     echo 'Start baseline workloads.'
-                    // sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-                    // sleep 30
-                    // echo 'Start contender workload.'
-                    // sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-                    // sleep 30
+                    sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    sleep BASELINE_SLEEP
+                    echo 'Start contender workload.'
+                    sh 'ansible-playbook -v -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LLC_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    sleep CONTENDER_SLEEP
                 }
                 dir('prm'){
                     echo "Calculate LLC results for ${BUILD_NUMBER}."
@@ -126,11 +128,11 @@ pipeline {
             steps {
                 dir('prm/owca/workloads'){
                     echo 'Start baseline workloads.'
-                    // sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
-                    // sleep 30
-                    // echo 'Start contender workload.'
-                    // sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=tensorflow_benchmark_prediction--stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
-                    // sleep 15
+                    sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
+                    sleep BASELINE_SLEEP
+                    echo 'Start contender workload.'
+                    sh 'ansible-playbook -v -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=tensorflow_benchmark_prediction--stress -e "${MBW_LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    sleep CONTENDER_SLEEP
                 }
                 dir('prm'){
                     echo "Calculate MBW results for ${BUILD_NUMBER}."
