--- a/prm/demo_scenarios/common/owca_config.yml
+++ b/prm/demo_scenarios/common/owca_config.yml
@@ -17,7 +17,7 @@ runner: !DetectionRunner
   extra_labels:
     env_uniq_id: "14"
     own_ip: "100.64.176.14"
-    build_commit: BUILD_COMMIT
-    build_number: BUILD_NUMBER
-    build_scenario: BUILD_SCENARIO
+    build_commit: "BUILD_COMMIT"
+    build_number: "BUILD_NUMBER"
+    build_scenario: "BUILD_SCENARIO"
     
