--- a/prm/demo_scenarios/common/owca_config.yml
+++ b/prm/demo_scenarios/common/owca_config.yml
@@ -2,7 +2,7 @@ runner: !DetectionRunner
   rdt_enabled: True
   node: !MesosNode
     mesos_agent_endpoint: "http://127.0.0.1:5051"
-  action_delay: 20.
+  action_delay: 10.
   metrics_storage: !KafkaStorage
     brokers_ips: ['100.64.176.12:9092']
     topic: "owca_metrics"
@@ -12,7 +12,7 @@ runner: !DetectionRunner
     topic: "owca_anomalies"
     max_timeout_in_seconds: 5.
   detector: !ContentionDetector
-    mode_config: collect
+    mode_config: detect
     
   extra_labels:
     env_uniq_id: "14"
