--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -54,7 +54,7 @@ pipeline {
                 LABELS="{additional_labels: {build_number: \"${BUILD_NUMBER}\", build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", build_scenario: \"$BUILD_SCENARIO\"}}"
             }
             steps {
-                echo 'Restart owca'
+                echo 'Reconfigure owca...'
                 contentReplace(
                     configs: [
                         fileContentReplaceConfig(
@@ -73,6 +73,7 @@ pipeline {
                 sudo cp ${WORKSPACE}/prm/dist/owca-prm.pex /usr/bin/
                 sudo systemctl restart owca
                 '''
+                echo 'Restart owca...'
                 sleep 5
                 sh 'sudo systemctl status owca'
 
@@ -85,16 +86,16 @@ pipeline {
                     sleep CONTENDER_SLEEP
                 }
                 dir('prm'){
-                    echo "Calculate ${BUILD_SCENARIO} results for ${BUILD_NUMBER}."
+                    echo 'Calculate precision and recall...'
                     sh "PYTHONPATH=. pipenv run pytest tests/e2e/test_calculate_accuracy.py --junitxml=unit_results.xml --junit-prefix=${BUILD_SCENARIO} --log-level=debug"
                 }
             }
             post {
                 always {
-                    echo 'Stop all workloads.'
+                    echo 'Stop all workloads...'
                     sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
                     sleep 5
-                    echo 'Plot LLC results.'
+                    echo 'Plot LLC results...'
                     plot(
                         csvFileName: 'llc_results.csv',
                         style: 'line',
@@ -131,7 +132,7 @@ pipeline {
 
             steps {
 
-                echo 'Restart owca'
+                echo 'Reconfigure owca...'
                 contentReplace(
                     configs: [
                         fileContentReplaceConfig(
@@ -151,6 +152,7 @@ pipeline {
                 sudo systemctl restart owca
                 '''
                 sleep 5
+                echo 'Restart owca...'
                 sh 'sudo systemctl status owca'
 
                 dir('prm/owca/workloads'){
@@ -162,16 +164,16 @@ pipeline {
                     sleep CONTENDER_SLEEP
                 }
                 dir('prm'){
-                    echo "Calculate ${BUILD_SCENARIO} results for ${BUILD_NUMBER}."
+                    echo 'Calculate precision and recall...'
                     sh "PYTHONPATH=. pipenv run pytest tests/e2e/test_calculate_accuracy.py --junitxml=unit_results.xml --junit-prefix=${BUILD_SCENARIO} --log-level=debug"
                 }
             }
             post {
                 always {
-                    echo 'Stop all workloads.'
+                    echo 'Stop all workloads...'
                     sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
                     sleep 5
-                    echo 'Plot MBW results.'
+                    echo 'Plot LLC results...'
                     plot(
                         csvFileName: 'mbw_results.csv',
                         style: 'line',
